test/parsing/errors/cantApplyPrivate.compopts
--detailed-errors # cantApplyPrivate-detailed.good
--no-detailed-errors # cantApplyPrivate-brief.good
